[metadata]
name = palettepal
version = attr: palettepal.__version__
author = Collin J. Delker
author_email = code@collindelker.com
url = https://github.com/cdelker/palettepal
description = Terminal-Based Color Editor and Palette Generator
long_description = file: README.md
long_description_content_type = text/markdown
keywords = color, palette, rgb, ryb, hsl, textual, tui
license = License :: OSI Approved :: MIT License
classifiers =
        Development Status :: 3 - Alpha
        Programming Language :: Python
        Topic :: Multimedia :: Graphics
        License :: OSI Approved :: MIT License

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    textual>=0.30
    pyperclip